--- a/index.html
+++ b/index.html
@@ -8,36 +8,36 @@
         <TITLE>抽签 </TITLE>
         <SCRIPT LANGUAGE="JavaScript">
             var names = [
-                "「红色的幻想乡」 <br> 「紅色の幻想郷」 <br> 敌机 6面5符 Hard / Lunatic",
-                "禁忌「恋之迷宫」 <br> 禁忌「恋の迷路」 <br> 敌机 EX面5符",
-                "「反魂蝶 -八分咲-」 <br> 「反魂蝶 -八分咲-」 <br> 敌机 6面6符 Lunatic",
-                "紫奥义「弹幕结界」 <br> 紫奥義「弾幕結界」 <br> 敌机 PH11符",
-                "神宝「Brilliant Dragon Bullet」（耀眼的龙玉） <br> 神宝「ブリリアントドラゴンバレッタ」 <br> 敌机 6B面1符 Hard / Lunatic",
-                "神宝「蓬莱的玉枝　-梦色之乡-」 <br> 神宝「蓬莱の玉の枝　-夢色の郷-」 <br> 敌机 6B面5符 Hard / Lunatic",
-                "开海「Moses之奇迹」（摩西之奇迹） <br> 開海「モーゼの奇跡」 <br> 敌机 5面2符 Hard / Lunatic",
-                "「风神之神德」 <br> 「風神様の神徳」 <br> 敌机 6面5符 Hard / Lunatic",
-                "土著神「小小青蛙不输风雨」 <br> 土着神「ケロちゃん風雨に負けず」 <br> 敌机 EX7符",
-                "四天王奥义「三步必杀」 <br> 四天王奥義「三歩必殺」 <br> 敌机 3面3符 Easy / Normal / Hard / Lunatic",
-                "回忆「波与粒的境界」 <br> 想起「波と粒の境界」 <br> 敌机 4面4符 Easy / Normal / Hard / Lunatic",
-                "奇迹「Miracle Fruit」（神秘果） <br> 奇跡「ミラクルフルーツ」 <br> 敌机 EX道中2符",
-                "本能「ID的解放」（本我的解放） <br> 本能「イドの解放」 <br> 敌机 EX3符",
-                "潜意识「弹幕的Rorschach」（弹幕的墨迹测验） <br> 無意識「弾幕のロールシャッハ」 <br> 敌机 EX6符",
-                "复燃「恋爱的埋火」 <br> 復燃「恋の埋火」 <br> 敌机 EX7符",
-                "深层「潜意识的基因」 <br> 深層「無意識の遺伝子」 <br> 敌机 EX8符",
-                "「被厌恶者的Philosophy」（被厌恶者的哲学） <br> 「嫌われ者のフィロソフィ」 <br> 敌机 EX9符",
-                "「Subterranean Rose」（地底的蔷薇） <br> 「サブタレイニアンローズ」 <br> 敌机 EX10符",
-                "大魔法「魔神复诵」 <br> 大魔法「魔神復誦」 <br> 敌机 6面4符 Easy / Normal / Hard / Lunatic",
-                "飞钵「传说的飞空圆盘」 <br> 飛鉢「伝説の飛空円盤」 <br> 敌机 6面6符 Hard / Lunatic",
-                "眼光「十七条的Laser」（十七条的光芒） <br> 眼光「十七条のレーザー」 <br> 敌机 6面6符 Easy / Normal",
-                "神光「无忤为宗」 <br> 神光「逆らう事なきを宗とせよ」 <br> 敌机 6面6符 Hard / Lunatic",
-                "乐符「Double Score」（双重乐谱） <br> 楽符「ダブルスコア」 <br> 敌机 4面3符 Lunatic",
-                "梦符「刈安色的错综迷梦」 <br> 夢符「刈安色の錯綜迷夢」 <br> 敌机 3面2符 Hard / Lunatic",
-                "梦符「苍蓝色的Dream Catcher」（苍蓝色的捕梦网） <br> 夢符「蒼色のドリームキャッチャー」 <br> 敌机 3面3符 Hard",
-                "梦符「梦我梦中」 <br> 夢符「夢我夢中」 <br> 敌机 3面3符 Lunatic",
-                "狱符「Star and Stripe」（星与条纹） <br> 獄符「スターアンドストライプ」 <br> 敌机 5面2符 Hard / Lunatic",
-                "「杀意的百合」 <br> 「殺意の百合」 <br> 敌机 6面2符 Easy / Normal / Hard / Lunatic",
-                "「纯粹的狂气」 <br> 「純粋なる狂気」 <br> 敌机 6面5符 Easy / Normal / Hard / Lunatic",
-                "「里·Breezy Cherry Blossom」（里·吹拂樱花） <br> 「裏・ブリージーチェリーブロッサム」 <br> 敌机 6面6符 Easy / Normal / Hard / Lunatic",
+                "「红色的幻想乡」 <br> 「紅色の幻想郷」 <br> 东方红魔乡 6面5符 Hard / Lunatic",
+                "禁忌「恋之迷宫」 <br> 禁忌「恋の迷路」 <br> 东方红魔乡 EX面5符",
+                "「反魂蝶 -八分咲-」 <br> 「反魂蝶 -八分咲-」 <br> 东方妖妖梦 6面6符 Lunatic",
+                "紫奥义「弹幕结界」 <br> 紫奥義「弾幕結界」 <br> 东方妖妖梦 PH11符",
+                "神宝「Brilliant Dragon Bullet」（耀眼的龙玉） <br> 神宝「ブリリアントドラゴンバレッタ」 <br> 东方永夜抄 6B面1符 Hard / Lunatic",
+                "神宝「蓬莱的玉枝　-梦色之乡-」 <br> 神宝「蓬莱の玉の枝　-夢色の郷-」 <br> 东方永夜抄 6B面5符 Hard / Lunatic",
+                "开海「Moses之奇迹」（摩西之奇迹） <br> 開海「モーゼの奇跡」 <br> 东方风神录 5面2符 Hard / Lunatic",
+                "「风神之神德」 <br> 「風神様の神徳」 <br> 东方风神录 6面5符 Hard / Lunatic",
+                "土著神「小小青蛙不输风雨」 <br> 土着神「ケロちゃん風雨に負けず」 <br> 东方风神录 EX7符",
+                "四天王奥义「三步必杀」 <br> 四天王奥義「三歩必殺」 <br> 东方地灵殿 3面3符 Easy / Normal / Hard / Lunatic",
+                "回忆「波与粒的境界」 <br> 想起「波と粒の境界」 <br> 东方地灵殿 4面4符 Easy / Normal / Hard / Lunatic",
+                "奇迹「Miracle Fruit」（神秘果） <br> 奇跡「ミラクルフルーツ」 <br> 东方地灵殿 EX道中2符",
+                "本能「ID的解放」（本我的解放） <br> 本能「イドの解放」 <br> 东方地灵殿 EX3符",
+                "潜意识「弹幕的Rorschach」（弹幕的墨迹测验） <br> 無意識「弾幕のロールシャッハ」 <br> 东方地灵殿 EX6符",
+                "复燃「恋爱的埋火」 <br> 復燃「恋の埋火」 <br> 东方地灵殿 EX7符",
+                "深层「潜意识的基因」 <br> 深層「無意識の遺伝子」 <br> 东方地灵殿 EX8符",
+                "「被厌恶者的Philosophy」（被厌恶者的哲学） <br> 「嫌われ者のフィロソフィ」 <br> 东方地灵殿 EX9符",
+                "「Subterranean Rose」（地底的蔷薇） <br> 「サブタレイニアンローズ」 <br> 东方地灵殿 EX10符",
+                "大魔法「魔神复诵」 <br> 大魔法「魔神復誦」 <br> 东方星莲船 6面4符 Easy / Normal / Hard / Lunatic",
+                "飞钵「传说的飞空圆盘」 <br> 飛鉢「伝説の飛空円盤」 <br> 东方星莲船 6面6符 Hard / Lunatic",
+                "眼光「十七条的Laser」（十七条的光芒） <br> 眼光「十七条のレーザー」 <br> 东方神灵庙 6面6符 Easy / Normal",
+                "神光「无忤为宗」 <br> 神光「逆らう事なきを宗とせよ」 <br> 东方神灵庙 6面6符 Hard / Lunatic",
+                "乐符「Double Score」（双重乐谱） <br> 楽符「ダブルスコア」 <br> 东方辉针城 4面3符 Lunatic",
+                "梦符「刈安色的错综迷梦」 <br> 夢符「刈安色の錯綜迷夢」 <br> 东方绀珠传 3面2符 Hard / Lunatic",
+                "梦符「苍蓝色的Dream Catcher」（苍蓝色的捕梦网） <br> 夢符「蒼色のドリームキャッチャー」 <br> 东方绀珠传 3面3符 Hard",
+                "梦符「梦我梦中」 <br> 夢符「夢我夢中」 <br> 东方绀珠传 3面3符 Lunatic",
+                "狱符「Star and Stripe」（星与条纹） <br> 獄符「スターアンドストライプ」 <br> 东方绀珠传 5面2符 Hard / Lunatic",
+                "「杀意的百合」 <br> 「殺意の百合」 <br> 东方绀珠传 6面2符 Easy / Normal / Hard / Lunatic",
+                "「纯粹的狂气」 <br> 「純粋なる狂気」 <br> 东方绀珠传 6面5符 Easy / Normal / Hard / Lunatic",
+                "「里·Breezy Cherry Blossom」（里·吹拂樱花） <br> 「裏・ブリージーチェリーブロッサム」 <br> 东方天空璋 6面6符 Easy / Normal / Hard / Lunatic",
 
             ];
             var time;
